--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,18 @@
 	<meta charset="utf-8">
 	<title>Threejs Portfolio</title>
 	<link rel="stylesheet" href="./style.css">
+	<style>
+		#joystick-container {
+			display: none;
+		}
+
+		/* Only display the joystick on screens smaller than 1600 pixels wide */
+		@media (max-width: 1800px) {
+			#joystick-container {
+				display: block;
+			}
+		}
+	</style>
 </head>
 
 <body>
@@ -17,6 +29,10 @@
 	<div class="overlay"></div>
 	<h1 class="loading">Loading Experience... <span id="progressPercentage"></span>%</h1>
 	<button class="start">START</button>
+
+	<div id="joystick-container" style="position: fixed; left: 100px; bottom: 100px; width: 150px; height: 150px; background: rgba(0, 0, 0, 0.5); border-radius: 50%;">
+		<div id="joystick" style="width: 100px; height: 100px; background: white; border-radius: 50%; position: absolute; top: 25px; left: 25px;"></div>
+	</div>
 
 	<div id="myModal" class="modal">
 		<div class="modal-wrapper">
@@ -27,7 +43,5 @@
 			<span class="close">Close</span>
 		</div>
 	</div>
-
 </body>
-
 </html>
