--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,8 @@
 				display: block;
 			}
 		}
+
+
 	</style>
 </head>
 
@@ -29,6 +31,12 @@
 	<div class="overlay"></div>
 	<h1 class="loading">Loading Experience... <span id="progressPercentage"></span>%</h1>
 	<button class="start">START</button>
+
+	<div id="instruction">
+		Use <strong>WASD</strong> or arrow keys to move around.
+		Use <strong>Joystick</strong> if you are on a mobile device.
+	</div>
+
 
 	<div id="joystick-container" style="position: fixed; left: 100px; bottom: 100px; width: 150px; height: 150px; background: rgba(0, 0, 0, 0.5); border-radius: 50%;">
 		<div id="joystick" style="width: 100px; height: 100px; background: white; border-radius: 50%; position: absolute; top: 25px; left: 25px;"></div>
