--- a/src/index.html
+++ b/src/index.html
@@ -3,32 +3,28 @@
 
 <head>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
 	<link rel="icon" href="img/favicon.ico" type="image/x-icon">
 	<meta charset="utf-8">
 	<title>Threejs Portfolio</title>
 	<link rel="stylesheet" href="./style.css">
-	<style>
-		#joystick-container {
-			display: none;
-		}
 
-		/* Only display the joystick on screens smaller than 1600 pixels wide */
-		@media (max-width: 1800px) {
-			#joystick-container {
-				display: block;
-			}
-		}
-
-
-	</style>
 </head>
 
 <body>
 	<canvas class="threejs"></canvas>
 	<script type="module" src="./index.js"></script>
 	<div class="overlay"></div>
+	<div class="spinner">
+		<div></div>
+		<div></div>
+		<div></div>
+		<div></div>
+		<div></div>
+		<div></div>
+	</div>
 	<h1 class="loading">Loading Experience... <span id="progressPercentage"></span>%</h1>
 	<button class="start">START</button>
 
@@ -38,8 +34,8 @@
 	</div>
 
 
-	<div id="joystick-container" style="position: fixed; left: 100px; bottom: 100px; width: 150px; height: 150px; background: rgba(0, 0, 0, 0.5); border-radius: 50%;">
-		<div id="joystick" style="width: 100px; height: 100px; background: white; border-radius: 50%; position: absolute; top: 25px; left: 25px;"></div>
+	<div id="joystick-container" style="position: fixed; left: 150px; bottom: 130px; width: 230px; height: 230px; background: rgba(0, 0, 0, 0.5); border-radius: 50%;">
+		<div id="joystick" style="width: 130px; height: 130px; background: white; border-radius: 50%; position: absolute; top: 25px; left: 25px;"></div>
 	</div>
 
 	<div id="myModal" class="modal">
